# whitesmith

./: .flake8  .gitignore  CHANGELOG.md  CHANGELOG.rst  Justfile  README.md  README.rst  pyproject.toml
.github/workflows/: main.yml  publish-pypi.yml  release.yml  tests-artifacts.yml  tests.yml
scripts/: get_version.py  show_release.py  write_changelog.py
src/whitesmith/: __init__.py  entrypoint.py  generate_handlers.py  generate_mock.py  generate_openapis.py  model.py  router.py  transport.py
src/whitesmith/entrypoints/: cli.py  plugin.py
src/whitesmith/templates/: conftest.jinja2  fixtures.jinja2  handlers.jinja2  redoc.jinja2
tests/functests/: test_api.py
tests/resources/address/: phonenumbers.py
tests/resources/notification/: notifications.py
tests/resources/organization/: user.py
tests/unittests/: test_api.py  test_entrypoint.py  test_generate_handlers.py  test_generate_openapi.py  test_router.py  test_transport.py
tests/unittests/entrypoints/: test_cli.py  test_plugin.py
tests/whitesmith/: conftest.py  fixtures.py  test_api.py  test_entrypoint.py  test_generate.py  test_phone_number_api.py  test_router.py  test_transport.py
tests/whitesmith/handlers/: address.py  notif.py  organization.py
tests/whitesmith_handlers/: organization.py
