[project]
name = "whitesmith"
version = "5.1.3"
description = "Testing toolbox for blacksmith"
authors = [{ name = "Guillaume Gauvrit", email = "guillaume@gauvr.it" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing :: Mocking",
]
license = { text = "MIT" }
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "Jinja2 >=3.1.2,<4",
    "blacksmith >=5.0.1,<6",
    "polyfactory >=2.14.0,<3",
    "pydantic >=2.6.0,<3",
    "venusian >=3.1.1,<4",
]

[project.urls]
Homepage = "https://github.com/mardiros/whitesmith"
Documentation = "https://github.com/mardiros/whitesmith/blob/main/README.md"
Repository = "https://github.com/mardiros/whitesmith.git"
Issues = "https://github.com/mardiros/whitesmith/issues"
Changelog = "https://github.com/mardiros/whitesmith/blob/main/CHANGELOG.md"

[project.scripts]
whitesmith = "whitesmith.entrypoints.cli:main"

[tool.pdm.build]
includes = ["src", "CHANGELOG.md"]
excludes = ["tests"]

[dependency-groups]
dev = [
    "pytest >=8.3.3,<9",
    "pytest-cov >=6.0.0,<7",
    "pytest-asyncio >=0.24.0",
    "mypy >=1.4.1,<2",
]

[project.entry-points.pytest11]
whitesmith = "whitesmith.entrypoints.plugin"

[[tool.mypy.overrides]]
disallow_any_generics = true
disallow_untyped_defs = true
module = "whitesmith.*"

[tool.pyright]
ignore = ["examples"]
include = ["src", "tests"]
reportPrivateUsage = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportShadowedImports = false
typeCheckingMode = "strict"
venvPath = ".venv"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "B",   # bug bear security warning
    "I",   # isort import order
    "F",   # pyflakes
    "UP",  # alter when better syntax is available
    "RUF", # the ruff developper's own rules
]
ignore = ["RUF022"]

[[tool.mypy.overrides]]
module = ["venusian"]
ignore_missing_imports = true

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "except ImportError:",
    "\\s+\\.\\.\\.$",
    "# coverage: ignore",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
